tests/samples/positive/traits/trait_predicate_where_generic.ax
module trait_predicate_where_generic;

trait Reader {
    fn read(self: &Self) -> i32;
}

struct File {
    value: i32;
}

impl Reader for File {
    fn read(self: &File) -> i32 {
        return self.value;
    }
}

fn use_reader<T>(value: T) -> i32 where T: Reader {
    return 0;
}

fn forward_reader<T>(value: T) -> i32 where T: Reader {
    return use_reader<T>(value);
}

fn main() -> i32 {
    let file = File { value: 7 };
    return forward_reader<File>(file);
}
